# travis2docker

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .gitmodules  .pre-commit-config-autofix.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: github-actions.yml
ci/: appveyor-bootstrap.py  appveyor-download.py  requirements.txt
ci/templates/: appveyor.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  travis2docker.rst
examples/: example_1.yml  example_2.yml  example_3.yml  example_4.yml  example_5.yml
src/travis2docker/: __init__.py  __main__.py  cli.py  exceptions.py  git_run.py  travis2docker.py
src/travis2docker/docker_helper/: build.py
src/travis2docker/templates/: .coveragerc  .devcontainer.json  10-build.sh  20-run.sh  Dockerfile  Dockerfile_deployv  build.sh  entrypoint.sh  entrypoint_deployv.sh  rvm_env.sh
tests/: test_travis2docker.py
travis2docker/: __init__.py  git_run.py  travis2docker.py
travis2docker.egg-info/: PKG-INFO  SOURCES.txt
travis2docker/test/: main.py
