[metadata]
name = oca-pylint-plugin
author = OCA - Odoo Community Association
summary = Pylint plugin for OCA
license = APGL3
description-file = README.md
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    pylint_oca
