[metadata]
name = travis2docker
author = Vauxoo
summary = Script to generate Dockerfile from .travis.yml file
license = APGL3
description-file = README.md
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages = travis2docker

[entry_points]
console_scripts =
    travisfile2dockerfile = travis2docker.travis2docker:main
